--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,26 @@ h3 {
 }
 
 .card {
-  background-color: rgb(250, 236, 192);
+  background-color: rgb(250, 250, 192);
+  padding: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .btn {
   margin-top: 15px;
   background-color: lightpink;
+}
+
+h2, h1 {
+  text-align: center;
+  color: rgb(252, 238, 214);
+  
+}
+
+.jumbotron {
+  background-image: url(https://miro.medium.com/max/1400/0*OtJ2F86wY946UO1A);
+
+
+
 }
