--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ h3 {
 }
 
 .card {
-  background-color: rgb(250, 250, 192);
+  background-color: rgb(254, 254, 224);
   padding: 5px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -18,12 +18,25 @@ h3 {
 h2, h1 {
   text-align: center;
   color: rgb(252, 238, 214);
-  
 }
 
 .jumbotron {
   background-image: url(https://miro.medium.com/max/1400/0*OtJ2F86wY946UO1A);
+}
 
+.container {
+  padding: 30px;
+  border:solid #79f810 3px;
+  background-color: rgb(241, 251, 251);
+}
 
+body {
+  background-color: black;
+}
 
+.output {
+  padding: 20px;
+  font-size: larger;
+  font-weight: bolder;
+  font-style: italic;
 }
